--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     </head>
     <body>
-		<h2> Welcome to my Website </h2>
+		<h2> Welcome to my Website</h2>
+		
+		<br> 
+		<br>
+		<br>
+		<p> Edit: Testing to see if edit goes through <p>
 		
 		<h3>
         <a href="gallery.html">Gallery</a>
