--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 		<br>
 		<br>
 		<p> Edit: Testing to see if edit goes through <p>
+
+		<p> I am trying to figure this out <p>
 		
 		<h3>
         <a href="gallery.html">Gallery</a>
