--- a/index.html
+++ b/index.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>My Slaypage</title>
+        <title>My Webpage</title>
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+		<link rel="stylesheet" href="styles.css">
     </head>
     <body>
-		<h2> Welcome to my Website</h2>
+		<h2> Welcome to my Website </h2>
 		
-		<br> 
+		<p> 
+		My name is Farid Hode, I am a student in ENGO 551. 
 		<br>
+		This website is part of Lab 0, and it is dedicated to my dog Tokio.
 		<br>
-		<p> Edit: Testing to see if edit goes through <p>
-
-		<p> I am trying to figure this out <p>
+		Use the following links to navigate my website: 
+		</p>
 		
-		<h3>
-        <a href="gallery.html">Gallery</a>
-		</h3>
-    </body>
+		<a class="btn btn-primary" href="gallery.html" role="button">Gallery</a>
+		<a class="btn btn-primary" href="funfacts.html" role="button">Fun Facts</a>
+		<a class="btn btn-primary" href="contactme.html" role="button">Contact Us</a>
+		
+		    
+	</body>
 </html>
